--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "iview": "^3.0.1",
     "mathjs": "^5.4.0",
+    "plotly.js": "^1.43.2",
     "q": "^1.5.1",
     "vue": "^2.5.17",
     "vue-axios": "^2.1.4",
